--- a/src/app/main/apps/e-commerce/product/product.component.scss
+++ b/src/app/main/apps/e-commerce/product/product.component.scss
@@ -202,3 +202,56 @@
     }
 
 }
+.mat-dialog-container {
+    padding: 0px !important;
+}
+
+
+
+
+
+@import "src/@fuse/scss/fuse";
+
+.invitation-form-dialog {
+
+    @include media-breakpoint('xs') {
+        width: 100% !important;
+        max-width: 100vw !important;
+    }
+
+    @include media-breakpoint('gt-xs') {
+        width: 100% !important;
+    }
+
+    .mat-dialog-container {
+        padding: 0 !important;
+
+        .mat-toolbar {
+            flex: 1 0 auto !important;
+            min-height: initial !important;
+        }
+
+        .toolbar-bottom {
+            height: auto;
+        }
+    }
+
+    .mat-dialog-content {
+
+        max-height: 100% !important; 
+
+    }
+
+    .dialog-content-wrapper {
+       
+        max-height: 100vh;
+        display: flex;
+        flex-direction: column;
+    }
+
+
+
+
+
+}
+
