--- a/src/app/main/pages/invoices/modern/modern.component.html
+++ b/src/app/main/pages/invoices/modern/modern.component.html
@@ -12,7 +12,7 @@
                     <div fxLayout="row" class="seller" fxLayoutAlign="start center">
 
                         <div class="logo">
-                            <img src="assets/images/logos/fuse.svg">
+                          LOGO IMAGEN
                         </div>
 
                         <div class="divider"></div>
