--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,3 +13,9 @@
 contacts-contact-list .mat-table .mat-row .mat-cell {
     min-width: 60px !important;
 }
+
+.ql-editor {
+
+    height: 800px !important;
+
+}
