--- a/src/app/main/apps/e-commerce/product/invitation-form/invitation-form.component.scss
+++ b/src/app/main/apps/e-commerce/product/invitation-form/invitation-form.component.scss
@@ -159,4 +159,8 @@ Preserve the relative scale, though. */
     margin-right: calc( 2 * var(--ck-spacing-large) );
 }
 
+.email-editor {
+    height: 550px;
+}
+
 
