--- a/src/app/main/apps/e-commerce/product/invitation-form/invitation-form.component.html
+++ b/src/app/main/apps/e-commerce/product/invitation-form/invitation-form.component.html
@@ -29,7 +29,7 @@
 
                         <div class="container">
                        
-                                <email-editor  class="email-editor" (load)="editorLoaded($event)" ></email-editor>
+                                <email-editor   ></email-editor>
                               </div>
 
 
