--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,3 +19,8 @@ contacts-contact-list .mat-table .mat-row .mat-cell {
     height: 800px !important;
 
 }
+
+.dialog-content-wrapper {
+    margin-left: -23px !important;
+}
+
