--- a/src/app/main/apps/e-commerce/product/product.component.html
+++ b/src/app/main/apps/e-commerce/product/product.component.html
@@ -169,7 +169,7 @@
                     
                                             <div class="container">
                                            
-                                                    <email-editor ></email-editor>
+                                                    <email-editor class="email-editor"></email-editor>
                                                   </div>
                     
                                                   
