--- a/src/app/main/apps/e-commerce/product/product.component.scss
+++ b/src/app/main/apps/e-commerce/product/product.component.scss
@@ -263,7 +263,11 @@
 }
 
 .email-editor {
-    height: 550px;
+    margin-left: -23px;
+}
+
+.dialog-content-wrapper {
+    margin-bottom: 4%;
 }
 
 
