--- a/src/app/main/apps/e-commerce/product/product.component.html
+++ b/src/app/main/apps/e-commerce/product/product.component.html
@@ -18,7 +18,7 @@
             <div fxLayout="column" fxLayoutAlign="start start"
                 [@animate]="{value:'*',params:{delay:'100ms',x:'-25px'}}">
                 <div class="h2" *ngIf="pageType ==='edit'">
-                    {{product.name}}
+                    {{product.eventName}}
                 </div>
                 <div class="h2" *ngIf="pageType ==='new'">
                     Nuevo Evento
@@ -55,9 +55,9 @@
             <div class="horizontal-stepper-wrapper">
 
                 <!-- HORIZONTAL STEPPER EXAMPLE -->
-                <mat-horizontal-stepper class="mat-elevation-z4" [linear]="true">
+                <mat-horizontal-stepper class="mat-elevation-z4"  linear #stepper>
 
-                    <mat-step [stepControl]="productForm">
+                    <mat-step [completed]="isCreated" [editable]="isCreated">
 
                         <form class="p-24 mr-24" fxLayout="column" fxLayoutAlign="start" fxFlex="1 0 auto"
                             name="productForm" [formGroup]="productForm">
@@ -126,104 +126,89 @@
 
                             </div>
 
-
+                            <button *ngIf="isCreated" class="mr-8 w-30-p" mat-raised-button matStepperNext  type="button" color="accent">
+                                Siguiente
+                            </button>
                         </form>
 
 
-                        <button class="mr-8" mat-raised-button matStepperNext type="button" color="accent">
-                            Siguiente
-                        </button>
+
 
 
                     </mat-step>
+   
 
-                    <mat-step >
+                   
+                    <mat-step [completed]="isCreated" [editable]="isCreated">
+
+
 
                         <ng-template matStepLabel>Invitados</ng-template>
+
+
+
                         <contacts></contacts>
 
-                        <button class="mr-8" mat-raised-button matStepperPrevious type="button" color="default">
-                            Anterior
-                        </button>
-
-
-                        <button class="mr-8" mat-raised-button matStepperNext type="button" color="accent">
+                        <br>
+                        <button class="mr-8 w-30-p" mat-raised-button matStepperNext type="button" color="accent">
                             Siguiente
                         </button>
 
+
+
+
                     </mat-step>
 
-                    <mat-step >
+             
+
+          
+                    <mat-step [completed]="isCreated" [editable]="isCreated">
 
                         <ng-template matStepLabel>Campaña</ng-template>
-                      
+                         
+
                         <div class="dialog-content-wrapper">
 
 
+                            <div fxLayout="row" class="ckeditor-content" fxLayoutAlign="start start">
 
-                                <div fxLayout="row" class="ckeditor-content" fxLayoutAlign="start start">
-                    
-                    
-                                    <div appearance="outline" floatLabel="always" class="w-100-p" fxFlex="100">
-                    
-                    
-                                            <div class="container">
-                                           
-                                                    <email-editor class="email-editor"></email-editor>
-                                                  </div>
-                    
-                                                  
-                    
+
+                                <div appearance="outline" floatLabel="always" class="w-100-p" fxFlex="100">
+
+
+                                    <div class="container">
+
+                                        <email-editor class="email-editor"></email-editor>
                                     </div>
-                    
-                    
-                    
-                                </div>
 
                                 </div>
-                        <button class="mr-8" mat-raised-button matStepperPrevious type="button" color="default">
-                            Anterior
-                        </button>
 
 
-                        <button (click)="exportHtml()" class="mr-8" matStepperNext mat-raised-button  type="button" color="accent">
-                            Siguiente
-                        </button>
-                    </mat-step>
 
-                    <mat-step>
+                           
+                           
+ </div>
 
-                        <ng-template matStepLabel>Done</ng-template>
-
-                        <div class="h2 m-16" fxLayout="row" fxLayoutAlign="center center">
-                           Vista de campaña resumen, finalizar y enviar convocatoria.
+                            
+ <button (click)="exportHtml()" class="mr-8 w-30-p btn-top" matStepperNext mat-raised-button
+ type="button" color="accent">
+ Siguiente
+</button>
                         </div>
 
-                        <button class="mr-8" mat-raised-button matStepperPrevious type="button" color="default">
-                            Anterior
-                        </button>
 
 
-                        <button class="mr-8" mat-raised-button matStepperNext type="button" color="accent">
-                            Siguiente
-                        </button>
+
 
                     </mat-step>
 
+           
 
-                    <div class="mb-24" fxLayout="column" fxLayoutAlign="start" *ngIf="isCreated">
-
-                            <button mat-button (click)="eventDelete()" color="warn">Eliminar evento
-                                <mat-icon>delete_forever</mat-icon>
-                            </button>
-                
-                        </div>
 
                 </mat-horizontal-stepper>
                 <!-- / HORIZONTAL STEPPER EXAMPLE -->
 
             </div>
-
 
 
             <!-- / REACTIVE FORM EXAMPLE -->
@@ -236,6 +221,13 @@
     </div>
 
 
+    <div class="mb-24" fxLayout="column" fxLayoutAlign="start" *ngIf="isCreated">
+
+            <button mat-button (click)="eventDelete()" color="warn">Eliminar evento
+                <mat-icon>delete_forever</mat-icon>
+            </button>
+
+        </div>
 
 
     <!-- / CONTENT -->
