--- a/src/app/main/pages/authentication/register/register.component.html
+++ b/src/app/main/pages/authentication/register/register.component.html
@@ -8,17 +8,18 @@
                 <img src="assets/images/logos/fuse.svg">
             </div>
 
-            <div class="title">CREATE AN ACCOUNT</div>
+            <div class="title">CREAR UNA CUENTA GRATIS</div>
 
             <form name="registerForm" [formGroup]="registerForm" novalidate>
 
                 <mat-form-field appearance="outline">
-                    <mat-label>Name</mat-label>
-                    <input matInput formControlName="name">
+                    <mat-label>Nombre de usuario</mat-label>
+                    <input matInput minlength="5" formControlName="username">
                     <mat-icon matSuffix class="secondary-text">account_circle</mat-icon>
-                    <mat-error>
-                        Name is required
+                    <mat-error >
+                        {{ getMesaggeErrorUsername() }}
                     </mat-error>
+                    
                 </mat-form-field>
 
                 <mat-form-field appearance="outline">
@@ -26,10 +27,10 @@
                     <input matInput formControlName="email">
                     <mat-icon matSuffix class="secondary-text">mail</mat-icon>
                     <mat-error *ngIf="registerForm.get('email').hasError('required')">
-                        Email is required
+                        Email es requerido
                     </mat-error>
                     <mat-error *ngIf="registerForm.get('email').hasError('email')">
-                        Please enter a valid email address
+                        Ingrese email valido
                     </mat-error>
                 </mat-form-field>
 
@@ -38,7 +39,7 @@
                     <input matInput type="password" formControlName="password">
                     <mat-icon matSuffix class="secondary-text">vpn_key</mat-icon>
                     <mat-error>
-                        Password is required
+                            {{ getMesaggeErrorPassword() }}
                     </mat-error>
                 </mat-form-field>
 
@@ -47,32 +48,33 @@
                     <input matInput type="password" formControlName="passwordConfirm">
                     <mat-icon matSuffix class="secondary-text">vpn_key</mat-icon>
                     <mat-error *ngIf="registerForm.get('passwordConfirm').hasError('required')">
-                        Password confirmation is required
+                            Contraseña es requerido
                     </mat-error>
                     <mat-error *ngIf="!registerForm.get('passwordConfirm').hasError('required') &&
                                        registerForm.get('passwordConfirm').hasError('passwordsNotMatching')">
-                        Passwords must match
+                        las contraseñas no coinciden
                     </mat-error>
                 </mat-form-field>
 
+                <!--
                 <div class="terms" fxLayout="row" fxLayoutAlign="center center">
                     <mat-checkbox name="terms" aria-label="I read and accept" required>
                         <span>I read and accept</span>
                     </mat-checkbox>
                     <a href="#">terms and conditions</a>
                 </div>
-
+                -->
                 <button mat-raised-button color="accent" class="submit-button" aria-label="CREATE AN ACCOUNT"
                         [disabled]="registerForm.invalid"
                         (click)="register()">
-                    CREATE AN ACCOUNT
+                    CREAR MI CUENTA
                 </button>
 
             </form>
 
             <div class="register" fxLayout="column" fxLayoutAlign="center center">
-                <span class="text">Already have an account?</span>
-                <a class="link" [routerLink]="'/pages/auth/login'">Login</a>
+                <span class="text">ya tienes una cuenta?</span>
+                <a class="link" [routerLink]="'/pages/auth/login'">Inciar sesión</a>
             </div>
 
         </div>
