--- a/src/app/main/apps/e-commerce/product/product.component.scss
+++ b/src/app/main/apps/e-commerce/product/product.component.scss
@@ -42,7 +42,7 @@
 
     form {
         width: 100%;
-        max-width: 800px !important;
+        max-width: 100% !important;
     }
 
     .form-errors-model {
