--- a/src/app/main/apps/contacts/contact-list/contact-list.component.html
+++ b/src/app/main/apps/contacts/contact-list/contact-list.component.html
@@ -150,7 +150,7 @@ fxLayoutAlign="center center">
 <mat-spinner></mat-spinner>
 </div>
 
-<div *ngIf="!_contactsService.contactsExist && !_contactsService.loadingContact" class="empty-card">
+<div *ngIf="!_contactsService.contactsExist && !_contactsService.loadingContact" class="empty-card-inv">
 
 
         <img class="empty-inv" src="assets/images/listEmptyCut.png">
