--- a/src/app/main/apps/contacts/contact-list/contact-list.component.scss
+++ b/src/app/main/apps/contacts/contact-list/contact-list.component.scss
@@ -122,7 +122,7 @@ contacts-contact-list {
     max-width: 100%;
 }
 
-.empty-card {
+.empty-card-inv {
     align-items: center;
     margin-left: 23%
     
