api integration forgot password and mailJet ready

--- a/src/app/main/pages/authentication/login/login.component.html
+++ b/src/app/main/pages/authentication/login/login.component.html
@@ -8,7 +8,7 @@
                 <img src="assets/images/logos/fuse.svg">
             </div>
 
-            <div class="title">Iniciar sesión con mi cuenta</div>
+            <div class="title">INICIAR SESIÓN CON MI CUENTA</div>
 
             <form name="loginForm" [formGroup]="loginForm" novalidate>
 
