--- a/src/app/main/apps/contacts/contacts.component.html
+++ b/src/app/main/apps/contacts/contacts.component.html
@@ -49,17 +49,17 @@
     <!-- CONTENT -->
     <div class="content">
 
-        <!-- SIDEBAR -->
+
+        <!-- SIDEBAR 
         <fuse-sidebar *ngIf="_contactsService.contacts.length > 2" class="sidebar" name="contacts-main-sidebar" position="left" lockedOpen="gt-sm">
 
-            <!-- SIDEBAR CONTENT -->
             <div class="content" fusePerfectScrollbar>
                 <contacts-main-sidebar [@animate]="{value:'*'}"></contacts-main-sidebar>
             </div>
-            <!-- / SIDEBAR CONTENT -->
+           
 
         </fuse-sidebar>
-        <!-- / SIDEBAR -->
+        SIDEBAR -->
 
         <!-- CENTER -->
         <div class="center p-24 pb-56 pr-sm-92" fusePerfectScrollbar>
