--- a/src/app/main/pages/authentication/forgot-password/forgot-password.component.html
+++ b/src/app/main/pages/authentication/forgot-password/forgot-password.component.html
@@ -7,31 +7,35 @@
             <div class="logo">
                 <img src="assets/images/logos/fuse.svg">
             </div>
-
-            <div class="title">RECOVER YOUR PASSWORD</div>
+            <div *ngIf="!emailSend" >
+            <div class="title">RECUPERAR MI CONTRASEÑA</div>
 
             <form name="forgotPasswordForm" [formGroup]="forgotPasswordForm" novalidate>
 
                 <mat-form-field appearance="outline">
-                    <mat-label>Email</mat-label>
+                    <mat-label>Correo electrónico</mat-label>
                     <input matInput formControlName="email">
                     <mat-icon matSuffix class="secondary-text">mail</mat-icon>
                     <mat-error *ngIf="forgotPasswordForm.get('email').hasError('required')">
-                        Email is required
+                        Email es requerido
                     </mat-error>
                     <mat-error *ngIf="forgotPasswordForm.get('email').hasError('email')">
-                        Please enter a valid email address
+                        Ingrese un Email valido
                     </mat-error>
                 </mat-form-field>
 
                 <button mat-raised-button class="submit-button" color="accent"
-                        aria-label="SEND RESET LINK" [disabled]="forgotPasswordForm.invalid">
-                    SEND RESET LINK
+                        aria-label="SEND RESET LINK" [disabled]="forgotPasswordForm.invalid"
+                        (click)="forgotPassword()">
+                    ENVIAR CONTRASEÑA
                 </button>
             </form>
+        </div>
+
+            <div  *ngIf="emailSend" class="title">Recuperación enviada al email: {{ email }}</div>
 
             <div class="login" fxLayout="row" fxLayoutAlign="center center">
-                <a class="link" [routerLink]="'/pages/auth/login'">Go back to login</a>
+                <a class="link" [routerLink]="'/pages/auth/login'">Regresar a inicar sesión</a>
             </div>
 
         </div>
